Improved requirements for builds
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>